Added Game functionality
Implemented playGame(). Added display() method to Card and inserted it in Hand display() method. Made Player deck accessible by Game. Simulated game play without user interface.